结构调整，垃圾回收起始